--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-project(MyProject)
+project(BiliardVideoAnalysis)
 
 # Include directory for header files
 include_directories(include)
@@ -8,8 +8,8 @@ include_directories(include)
 find_package(OpenCV 4 REQUIRED)
 
 # Add executable
-add_executable(my_program src/ImageStitcher.cpp src/main.cpp)
+add_executable(${PROJECT_NAME}
+        src/circleDetector.cpp)
 
 # Link against OpenCV libraries
-target_link_libraries(my_program ${OpenCV_LIBS})
-
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
