Now the main.cpp include field_detection and ball_detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ include_directories(
 # Add executable
 add_executable(BiliardVideoAnalysis
     src/field_detection.cpp
+	src/ball_detection.cpp
     src/main.cpp
     # Include other source files if needed (ball_classification.cpp, tracking.cpp, etc.)
 )
